--- a/style/wireframe.css
+++ b/style/wireframe.css
@@ -41,7 +41,12 @@
 *::before,
 *::after {
   box-sizing: border-box; }
+#logo{
 
+    width: 50px;
+    margin-left:10px;
+    height: 50px;
+}
 html {
   font-family: sans-serif;
   line-height: 1.15;
