--- a/style/postit.css
+++ b/style/postit.css
@@ -1,3 +1,6 @@
+.p-postit, .h2-postit{
+    color: #000F55 !important;
+}
 
 .h2-postit{
   font-size:100%;
@@ -13,7 +16,10 @@
 }
 .ul-postit{
   overflow:hidden;
-  padding:3em;
+  display: inline;
+  width: 295px;
+  height: 270px;
+
 }
 .ul-postit .li-postit .a-postit{
   text-decoration:none;
@@ -35,13 +41,14 @@
   float:left;
 }
 .ul-postit .li-postit .h2-postit{
-  font-size:140%;
+  font-size:85%;
   font-weight:bold;
   padding-bottom:10px;
 }
 .ul-postit  .li-postit  .p-postit {
   font-family:"Reenie Beanie",arial,sans-serif;
-  font-size:180%;
+  font-size: 157%;
+  line-height: 85%;
 }
 .ul-postit  .li-postit  .a-postit {
   -webkit-transform: rotate(-6deg);
