--- a/style/postit.css
+++ b/style/postit.css
@@ -103,4 +103,4 @@ margin-left: 75%;
 }
 .ol-postit{text-align:center;}
 .ol-postit .li-postit{display:inline;padding-right:1em;}
-.ol-postit .li-postit .a-postit{color:#fff;}
+.ol-postit .li-postit .a-postit{color: #005bff;}
